# snappwd-service

./: Cargo.toml  Dockerfile  README.md  deploy.sh  openapi.yaml
src/: db.rs  handlers.rs  main.rs  models.rs
